--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,61 @@
 @tailwind components;
 
 @tailwind utilities;
+
+* {
+	font-family: "Courier New", Courier, monospace;
+	flex: auto;
+}
+
+.centerText{
+	text-align: center;
+}
+
+
+.box {
+	margin-left: 25px;
+	margin-right: 25px;
+	margin-top: 25px;
+	margin-bottom: 10px;
+	border: 5px solid rgb(83, 52, 133);
+	border-radius: 8%;
+	padding: 25px;
+}
+
+.card {
+	background-color: rgba(71, 170, 139, 0.637);
+
+}
+
+.previous {
+	background-color: rgba(71, 170, 139, 0.637);
+
+}
+
+.grey 
+{background-color: grey;}
+.green 
+{background-color: green;}
+.yellow 
+{background-color: yellow;}
+.orange 
+{background-color: orange;}
+.red 
+{color: white;
+	background-color: red;}
+.black 
+{color: white;
+	background-color: black
+}
+
+#uvInfo
+{ height: 5px;
+	width: 5px;
+	margin-left: 25px;
+	margin-right: 25px;
+	margin-top: 25px;
+	margin-bottom: 10px;
+	border: 5px solid rgb(83, 52, 133);
+	border-radius: 8%;
+	padding: 25px;
+}
