added a class name to create cards to display the entries

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,12 @@ body {
 	border-radius: 8%;
   background-color: indigo; 
 }
+.card {
+	font-family: "Courier New", Courier, monospace;
+ 	border: 5px solid rgb(177, 174, 143);
+	border-radius: 8%;
+  background-color: indigo; 
+}
 
 footer {
 	font-family: "Courier New", Courier, monospace;
